Updates and changes to CSS

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <div class="container">
               <div class="row justify-content-around" id="holder">
                 <ul>
-                  <li id="gameType"> Baking </li>
+                  <li id="recipeType"> Baking </li>
                   <li class="recipeButton" id="tChocCookies" data-toggle="modal"  data-target="#recipeModal" title="Triple Chocolate Cookies"> Triple Chocolate Cookies </li>
                 </ul>
               </div>
@@ -57,7 +57,7 @@
             <div class="container">
               <div class="row justify-content-around" id="holder">
                 <ul>
-                  <li id="gameType"> Classics </li>
+                  <li id="recipeType"> Classics </li>
                   <li class="recipeButton" id="ppTaco" data-toggle="modal"  data-target="#recipeModal" title="Pulled Pork Tacos"> Mexican Pulled Pork Tacos </li>
                 </ul>
               </div>
